--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,11 @@ body {
 #chart{
     width: 50%;
     margin-right: 5px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 400px;
+    height: 400px;
 }
 
 .step{
